Fix highlighting on tablet screens

--- a/src/index.css
+++ b/src/index.css
@@ -146,7 +146,7 @@ ol div.ng-scope li div.ateria h5 {
 
   #left {
     width: 100%;
-    padding-top: 10px;
+    padding-top: 25px;
     padding-left: 30px;
     padding-right: 30px;
   }
